# backend/docs/contracts/openapi.snapshot.json
@@ -1313,6 +1313,30 @@
                 "x-laravel-name": "api.v0_3.iq_owner_original_30.assets.show"
             }
         },
+        "/api/v0.3/local-report-sessions": {
+            "post": {
+                "operationId": "api.v0_3.local_report_sessions.store",
+                "tags": [
+                    "api:v0.3"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "x-laravel-action": "App\\Http\\Controllers\\API\\V0_3\\LocalReportSessionController@store",
+                "x-laravel-middleware": [
+                    "api",
+                    "Illuminate\\Routing\\Middleware\\ThrottleRequests:api_public",
+                    "App\\Http\\Middleware\\NormalizeApiErrorContract",
+                    "App\\Http\\Middleware\\ResolveAnonId",
+                    "App\\Http\\Middleware\\ResolveOrgContext",
+                    "App\\Http\\Middleware\\FmTokenAuth",
+                    "Illuminate\\Routing\\Middleware\\ThrottleRequests:api_attempt_submit"
+                ],
+                "x-laravel-name": "api.v0_3.local_report_sessions.store"
+            }
+        },
         "/api/v0.3/me/attempts": {
             "get": {
                 "operationId": "get_api_v0_3_me_attempts",
